--- a/style.css
+++ b/style.css
@@ -1,5 +1,35 @@
 :root {
-  padding: 0
+  padding: 0;
+  border: 0;
+}
 
+body {
+  max-width: 384px;
+  text-align: center;
+}
 
+header {
+  background-color: #8E9AAF;
+  bottom: 36px;
+}
+
+h1 {
+  font-family: 'Staatliches';
+  font-size: 40px;
+  line-height: 34px;
+  color: #FFFFFF;
+  padding: 8px 86px;
+  background-color: #CBC0D3;
+  
+}
+
+p {
+  font-family: 'Palanquin';
+  font-size: 20px;
+  line-height: 15px;
+  color: #23053A;
+}
+
+img logo 1{
+padding: 32px 123px;
 }
