--- a/style.css
+++ b/style.css
@@ -1,6 +1,11 @@
-:root {
+* {
+  margin: 0;
   padding: 0;
-  border: 0;
+  box-sizing: border-box;
+}
+
+:root {
+  font-size: 62.5%;
 }
 
 body {
@@ -9,27 +14,38 @@ body {
 }
 
 header {
-  background-color: #8E9AAF;
-  bottom: 36px;
+  background-color: #8e9aaf;
+  bottom: 3.6rem;
 }
 
 h1 {
-  font-family: 'Staatliches';
-  font-size: 40px;
-  line-height: 34px;
-  color: #FFFFFF;
-  padding: 8px 86px;
-  background-color: #CBC0D3;
-  
+  font-family: "Staatliches";
+  font-weight: normal;
+  font-size: 4rem;
+  line-height: 3.4rem;
+  color: #ffffff;
+  padding: 0.8rem 8.6rem;
+  background-color: #cbc0d3;
+
+  letter-spacing: 0.05rem;
+  text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 p {
-  font-family: 'Palanquin';
-  font-size: 20px;
-  line-height: 15px;
-  color: #23053A;
+  font-family: "Palanquin";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 1.5rem;
+
+  display: flex;
+  align-items: center;
+  text-align: center;
+
+  color: #23053a;
 }
 
-img logo 1{
-padding: 32px 123px;
+#logo {
+  padding-top: 3.2rem;
+  padding-bottom: 3.2rem;
 }
