--- a/style.css
+++ b/style.css
@@ -48,9 +48,9 @@ p {
 
 main {
   margin: 1.4rem auto 6rem;
-  display: flex;
-  flex-direction: column;
+  display: grid;
   gap: 3.6rem;
+  justify-items: center;
 }
 
 #logo {
@@ -58,13 +58,16 @@ main {
   padding-bottom: 3.2rem;
 }
 
-.img {
-  width: 100%;
-  height: auto;
-}
-
 .card {
   position: relative;
+}
+
+.card img {
+  transition: 200ms;
+}
+
+.card img:hover {
+  transform: scale(1.1);
 }
 
 .card span {
@@ -76,15 +79,20 @@ main {
   height: 35px;
   border-radius: 20px;
 
-  /* font-weight: bold; */
   font-family: var(--ff-heading);
   font-size: 20px;
   line-height: 34px;
 
   position: absolute;
   top: 1.7rem;
-  left: 79.2rem;
+  left: 19.2rem;
 }
 
-@media (min-width: 700px) {
+/* @media (min-width: 700px) {
+  
+} */
+
+@keyframe topdown {
+  0% {
+  }
 }
